feat: decouple client authentication with CredentialsProvider and AuthMethods